--- a/templates/after_recomendasi.html
+++ b/templates/after_recomendasi.html
@@ -7,6 +7,13 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/stylee.css') }}"
     />
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.all.min.js"></script>
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
   </head>
   <body>
     <div id="error-page">
@@ -23,4 +30,22 @@
       </div>
     </div>
   </body>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      // Get Flask flash message from HTML template
+      var successMessage =
+        "{% with messages = get_flashed_messages(with_categories=true) %}{% if messages %}{% for category, message in messages %}{% if category == 'success' %}{{ message }}{% endif %}{% endfor %}{% endif %}{% endwith %}";
+
+      // Display Flask flash message in SweetAlert2 with success icon
+      if (successMessage) {
+        Swal.fire({
+          title: "Berhasil!",
+          text: successMessage,
+          icon: "success",
+          confirmButtonText: "OK",
+        });
+      }
+    });
+  </script>
 </html>
