--- a/templates/cafe_copy.html
+++ b/templates/cafe_copy.html
@@ -13,11 +13,10 @@
       rel="stylesheet"
     />
 
-    <!-- feather icon -->
-    <script src="https://unpkg.com/feather-icons"></script>
+    <!-- Unicons CSS -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
 
     <link
@@ -27,7 +26,6 @@
     <title>Ngoplos</title>
   </head>
   <body>
-    <!-- Navbar start -->
     <nav class="navbar">
       <img
         src="{{ url_for('static', filename='img/Logo.png') }}"
@@ -36,9 +34,8 @@
       />
       <div class="navbar-nav">
         <a href="/">Home</a>
-        <a href="/cafe">Cafe</a>
+        <a href="/cafe_noLogin">Cafe</a>
       </div>
-
       <div class="navbar-extra">
         <a href="#" id="search-button"
           ><img src="{{ url_for('static', filename='img/search.svg') }}"
@@ -47,19 +44,8 @@
           ><img src="{{ url_for('static', filename='img/align-justify.svg') }}"
         /></a>
       </div>
-
-      <!-- search form start -->
-      <div class="search-form">
-        <input type="search" id="search-box" placeholder="Cari Lokasi ...." />
-        <label for="search-box"
-          ><img src="{{ url_for('static', filename='img/search.svg') }}" />
-        </label>
-      </div>
-      <!-- search form end -->
     </nav>
-    <!-- Navbar end -->
 
-    <!-- section cafe -->
     <section class="cafe" id="cafe">
       <h2>Ca<span>fe</span></h2>
       <p>
@@ -67,7 +53,21 @@
         yang mengubah setiap kunjungan menjadi petualangan rasa
       </p>
 
+      <div class="input-box">
+        <form action="/search_nologin" method="POST" class="search-form">
+          <i class="uil uil-search"></i>
+          <input
+            type="search"
+            name="search_query"
+            id="search-box"
+            placeholder="Cari Lokasi ...."
+          />
+          <button class="button" type="submit">Cari</button>
+        </form>
+      </div>
+
       <div class="row">
+        {% for cafe_item in cafe_data %}
         <div class="cafe-card">
           <div class="cafe-icons">
             <a href="#"
@@ -75,7 +75,7 @@
                 src="{{ url_for('static', filename='img/save.svg') }}"
                 class="img-logo"
             /></a>
-            <a href="#" class="item-detail-button"
+            <a href="#" class="item-detail-button" data-id="{{ cafe_item.id }}"
               ><img
                 src="{{ url_for('static', filename='img/eye.svg') }}"
                 class="img-logo"
@@ -89,109 +89,33 @@
           </div>
 
           <div class="cafe-content">
-            <h3>Bento Kopi Godean</h3>
-            <div class="cafe-stars">
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-            </div>
+            <h3>{{ cafe_item.nama_cafe }}</h3>
           </div>
 
           <div class="cafe-closed">
-            <p>jam operasional : 09.00 - 23.00</p>
+            <p>
+              jam operasional : {{ cafe_item.jam_buka }} wib - {{
+              cafe_item.jam_tutup }} wib
+            </p>
           </div>
 
           <div class="cafe-location">
-            <p>lokasi : jln.Magelang</p>
+            <p>lokasi : {{ cafe_item.nama_lokasi }}</p>
+          </div>
+
+          <div>
+            <a href="/cafe_detail_nologin/{{ cafe_item.cafe_id }}"
+              >Lihat Detail</a
+            >
           </div>
         </div>
-
-        <div class="cafe-card">
-          <div class="cafe-icons">
-            <a href="#"
-              ><img
-                src="{{ url_for('static', filename='img/save.svg') }}"
-                class="img-logo"
-            /></a>
-            <a href="#" class="item-detail-button"
-              ><img
-                src="{{ url_for('static', filename='img/eye.svg') }}"
-                class="img-logo"
-            /></a>
-          </div>
-
-          <div class="cafe-image">
-            <img
-              src="{{ url_for('static', filename='img/sincerely-media-VNsdEl1gORk-unsplash (1).jpg') }}"
-            />
-          </div>
-
-          <div class="cafe-content">
-            <h3>Bento Kopi Godean</h3>
-            <div class="cafe-stars">
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-            </div>
-          </div>
-
-          <div class="cafe-closed">
-            <p>jam operasional : 09.00 - 23.00</p>
-          </div>
-
-          <div class="cafe-location">
-            <p>lokasi : jln.Magelang</p>
-          </div>
-        </div>
-
-        <div class="cafe-card">
-          <div class="cafe-icons">
-            <a href="#"
-              ><img
-                src="{{ url_for('static', filename='img/save.svg') }}"
-                class="img-logo"
-            /></a>
-            <a href="#" class="item-detail-button"
-              ><img
-                src="{{ url_for('static', filename='img/eye.svg') }}"
-                class="img-logo"
-            /></a>
-          </div>
-
-          <div class="cafe-image">
-            <img
-              src="{{ url_for('static', filename='img/sincerely-media-VNsdEl1gORk-unsplash (1).jpg') }}"
-            />
-          </div>
-
-          <div class="cafe-content">
-            <h3>Bento Kopi Godean</h3>
-            <div class="cafe-stars">
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-            </div>
-          </div>
-
-          <div class="cafe-closed">
-            <p>jam operasional : 09.00 - 23.00</p>
-          </div>
-
-          <div class="cafe-location">
-            <p>lokasi : jln.Magelang</p>
-          </div>
-        </div>
+        {% endfor %}
       </div>
     </section>
 
     <!-- modal box item detail -->
-    <div class="modal" id="item-detail-modal">
+    {% for cafe_item in cafe_data %}
+    <div class="modal" id="modal{{ cafe_item.id }}">
       <div class="modal-container">
         <a href="#" class="close-icon"
           ><img src="{{ url_for('static', filename='img/x.svg') }}"
@@ -201,19 +125,13 @@
             src="{{ url_for('static', filename='img/sincerely-media-VNsdEl1gORk-unsplash (1).jpg') }}"
           />
           <div class="cafe-content">
-            <h3>Bento kopi Godean</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Consequuntur non quibusdam illo accusamus quia illum aspernatur
-              maiores adipisci inventore porro! Eos modi praesentium facere quam
-              velit? Voluptas voluptatem rem similique.
-            </p>
-            <ul>
-              <p>Fasilitas</p>
-              <li>wifi</li>
-              <li>Fasilitas</li>
-              <li>Fasilitas</li>
-            </ul>
+            <h3>{{ cafe_item.nama_cafe }}</h3>
+            <p>{{ cafe_item.deskripsi }}</p>
+            <p>Kategori Menu: {{ cafe_item.Kategori }}</p>
+            <p>Menu: {{ cafe_item.menu_nama }}</p>
+            <p>Harga: {{ cafe_item.Harga }}</p>
+            <p>Jam Buka: {{ cafe_item.jam_buka }}</p>
+            <p>Jam Tutup: {{ cafe_item.jam_tutup }}</p>
             <a href="#" id="history" class="history"
               ><span>Tambahkan Ingin dikunjungi</span></a
             >
@@ -221,6 +139,7 @@
         </div>
       </div>
     </div>
+    {% endfor %}
     <!-- modal box item detail -->
 
     <!-- my script -->
