--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,8 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
 
+
+    <link rel="stylesheet" href="/Project_KPL/css/homr.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 
     <title>Ngoplos</title>
@@ -21,7 +23,7 @@
 <body>
     <!-- Navbar start -->
     <nav class="navbar">
-        <img src="{{ url_for('static', filename='img/Logo.png') }}" alt="ngoplos-logo">
+        <img src="{{ url_for('static', filename='img/Logo.png') }}">
         <span class="hamburger-btn material-symbols-rounded">menu</span>
         <ul class="links">
             <span class="close-btn material-symbols-rounded">close</span>
@@ -29,26 +31,24 @@
         <div class="navbar-nav">
             <a href="/">Home</a>
             <a href="/cafe_noLogin">Cafe</a>
-            <button class="login-btn" id="login-btn">Login</button>
+            <button class="login-btn" id="login-btn">login</button>
         </div>
 
-        <a href="#" id="hamburger-menu"><img src="{{ url_for('static', filename='img/align-justify.svg') }}" alt="home-icon"></a>
-
-
-           
+        <a href="#" id="hamburger-menu"><img src="{{ url_for('static', filename='img/align-justify.svg') }}"></a>
+            
     </nav>
     <!-- Navbar end -->
 
     <section class="hero">
         <div class="hero-text">
-            <h1>Cari tempat </h1>
+            <h1>Cari tempat <br>
             <h1>nongkrong terbaikmu</h1>
             <h1>disini!</h1>
             <a href="#">Cari Tempat</a>
         </div>
         
         <div class="hero-img">
-            <img src="{{ url_for('static', filename='img/coffee-isometric 1.png') }}" alt="home-icon">
+            <img src="{{ url_for('static', filename='img/coffee-isometric 1.png') }}">
         </div>
     </section>
 
@@ -67,12 +67,12 @@
                 <form action="/login" method="POST">
                     <div class="input-field">
                         <label for="username" >Username</label>
-                        <input type="text" id="username" placeholder="Masukan Username anda" required>
+                        <input name="username" type="text" id="username"  placeholder="Masukan Username anda" required>
                     </div>
 
                     <div class="input-field">
                         <label for="password" >password</label>
-                        <input type="text" id="Password" placeholder="Masukan Paswword anda" required>
+                        <input name="password" type="text" id="Password"  placeholder="Masukan Paswword anda" required>
                     </div>
 
                     <button class="button1" type="submit" >Masuk</button>
@@ -92,6 +92,8 @@
             <div class="form-content">
                 <img src="{{ url_for('static', filename='img/Logo.png') }}" alt="Logo" class="navbar-logo" >
                 <p>Halo, Silahkan daftar terlebih dahulu</p>
+                <div class="row justify-content-center">         
+                </div>
                 <form action="/register" method="POST">
 
                     <div class="input-field">
@@ -125,6 +127,8 @@
             </div>
         </div>
     </div>
+
+
 
     <script src="{{ url_for('static', filename='js/home.js') }}"></script>
 
