--- a/templates/search_results_nologin.html
+++ b/templates/search_results_nologin.html
@@ -89,7 +89,9 @@
           </div>
 
           <div>
-            <a href="/cafe_detail/{{ location.cafe_id }}">Lihat Detail</a>
+            <a href="/cafe_detail_nologin/{{ location.cafe_id }}"
+              >Lihat Detail</a
+            >
           </div>
         </div>
         {% endfor %}
