--- a/templates/cafe_detail_copy_nologin.html
+++ b/templates/cafe_detail_copy_nologin.html
@@ -1,86 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- feather icon -->
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.all.min.js"></script>
 
-
-    <link rel="stylesheet" href="/Project_KPL/css/homr.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/cafe_detail.css') }}">
+    <link rel="stylesheet" href="/Project_KPL/css/homr.css" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/home.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/cafe_detail.css') }}"
+    />
 
     <title>Ngoplos</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar">
-        <img src="{{ url_for('static', filename='img/Logo.png') }}">
-        <span class="hamburger-btn material-symbols-rounded">menu</span>
-        <ul class="links">
-            <span class="close-btn material-symbols-rounded">close</span>
-        </ul>
-        <div class="navbar-nav">
-            <a href="/">Home</a>
-            <a href="/cafe_noLogin">Cafe</a>
-          </div>
-        <a href="#" id="hamburger-menu"><img src="{{ url_for('static', filename='img/align-justify.svg') }}"></a>
+      <img src="{{ url_for('static', filename='img/Logo.png') }}" />
+      <span class="hamburger-btn material-symbols-rounded">menu</span>
+      <ul class="links">
+        <span class="close-btn material-symbols-rounded">close</span>
+      </ul>
+      <div class="navbar-nav">
+        <a href="/">Home</a>
+        <a href="/cafe_noLogin">Cafe</a>
+      </div>
+      <a href="#" id="hamburger-menu"
+        ><img src="{{ url_for('static', filename='img/align-justify.svg') }}"
+      /></a>
     </nav>
 
     <div class="container">
-        <div class="box">
-            <div class="images">
-                <div class="img-holder active">
-                    <img src="{{ url_for('static', filename='img/1.jpeg') }}">
-                </div>
-                <div class="img-holder">
-                    <img src="{{ url_for('static', filename='img/4.jpeg') }}">
-                </div>
-                <div class="img-holder">
-                    <img src="{{ url_for('static', filename='img/2.jpeg') }}">
-                </div>
-                <div class="img-holder">
-                    <img src="{{ url_for('static', filename='img/3.jpeg') }}">
-                </div>
-            </div>
-            <div class="basic-info">
-                <h1>{{ cafe_detail.nama_cafe }}</h1>
-                <div class="options">
-                    <p id="jam">Jam Operasional</p>
-                    <a href="#">{{ cafe_detail.jam_buka }} WIB </a>
-                    <span>-</span>
-                    <a href="#">{{ cafe_detail.jam_tutup }} WIB </a>
-                </div>
-            </div>
-            <div class="description">
-                <p>{{ cafe_detail.deskripsi }}</p>
-                <ul class="features">
-                    <h3>Menu</h3>
-                    <!-- Tampilkan menu dari data yang diterima -->
-                    {% for menu in cafe_detail.menus %}
-                        <li>{{ menu.menu_nama }} - {{ menu.Harga }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="social">
-                    <h3>Fasilitas : </h3>
-                    <li>wifi</a></li>
-                    <li>Stop Kontak</i></a></li>
-                    <li>Tempat Merokok</a></li>
-                </ul>
-                <a href="{{ cafe_detail.Link_gmaps }}">Gmaps</a>
-            </div>
+      <div class="box">
+        <div class="images">
+          <div class="img-holder active">
+            <img src="{{ url_for('static', filename='img/1.jpeg') }}" />
+          </div>
+          <div class="img-holder">
+            <img src="{{ url_for('static', filename='img/4.jpeg') }}" />
+          </div>
+          <div class="img-holder">
+            <img src="{{ url_for('static', filename='img/2.jpeg') }}" />
+          </div>
+          <div class="img-holder">
+            <img src="{{ url_for('static', filename='img/3.jpeg') }}" />
+          </div>
         </div>
+        <div class="basic-info">
+          <h1 style="color: black">{{ cafe_detail.nama_cafe }}</h1>
+          <div class="options">
+            <p id="jam" style="color: black; font-size: medium">
+              Jam Operasional
+            </p>
+            <a href="#">{{ cafe_detail.jam_buka }} WIB </a>
+            <a href="#">{{ cafe_detail.jam_tutup }} WIB </a>
+          </div>
+        </div>
+        <div class="description">
+          <p>{{ cafe_detail.deskripsi }}</p>
+          {% if cafe_detail.menus %}
+          <ul class="features">
+            <h3>Menu</h3>
+            {% for category, menus in cafe_detail.menus.items() %}
+            <h4>{{ category }}</h4>
+            <ul>
+              {% for menu in menus %}
+              <li>{{ menu.menu_nama }} - Rp.{{ menu.Harga }}</li>
+              {% endfor %}
+            </ul>
+            {% endfor %}
+          </ul>
+          {% else %}
+          <p>Menu tidak tersedia.</p>
+          {% endif %}
+
+          <ul class="social">
+            <h3>Fasilitas</h3>
+            {% if cafe_detail.fasilitas %}
+            <ul>
+              {% for fasilitas in cafe_detail.fasilitas.split('.') %}
+              <li>{{ fasilitas }}</li>
+              {% endfor %}
+            </ul>
+            {% else %}
+            <p>Fasilitas tidak tersedia.</p>
+            {% endif %}
+          </ul>
+
+          <a href="{{ cafe_detail.Link_gmaps }}">Gmaps</a>
+        </div>
+      </div>
     </div>
 
     <script src="{{ url_for('static', filename='js/home.js') }}"></script>
-</body>
+  </body>
 </html>
